favicon changed portfolio shifted to up copyright color corrected

--- a/css/style.css
+++ b/css/style.css
@@ -1117,7 +1117,7 @@ a:focus {
 }
 
 .footer p {
-    color: #222222;
+    color: #ffffff;
     margin: 0;
 }
 
